--- a/wqa_android_ui_1/app/build.gradle
+++ b/wqa_android_ui_1/app/build.gradle
@@ -44,4 +44,5 @@ dependencies {
     implementation files('libs/wqa_system.jar')
     implementation 'org.jetbrains:annotations:15.0'
     implementation files('libs/wqa_dev_migp.jar')
+    implementation files('libs/dev_migp_base.jar')
 }
