--- a/wqa_android_ui_1/app/build.gradle
+++ b/wqa_android_ui_1/app/build.gradle
@@ -32,6 +32,7 @@ repositories {
     maven { url "https://jitpack.io" }
 }
 dependencies {
+    implementation'org.nanohttpd:nanohttpd:2.3.1'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'androidx.appcompat:appcompat:1.1.0'
